--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "dotenv": "^16.4.5",
+    "firebase": "^10.13.1",
+    "persist": "^0.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "rollup": "^4.19.1"
   },
   "devDependencies": {
